@@ -10,6 +10,8 @@ Add tag viewer
 This is a view that displays all the tags in the database. It can be used to quickly filter between 
 tags.
 
+Add a counter for total entries in database under Entry menu.
+
 Version 1.14.0
 ---------------------------------
 Add new completion status: On-Hold
